# csolink-model

./: .gitignore  ChangeLog  Makefile  Pipfile  README.md  _config.yml  context.jsonld  contextn.jsonld  csolink-model.graphql  csolink-model.owl.ttl  csolink-model.proto  csolink-model.shex  csolink-model.shexj  csolink-model.yaml  csolink-modeln.shex  csolink-modeln.shexj  docs  docs~master  example-model.yaml  index.md  notes.md  setup.cfg
about/: mapping-neo4j.md  mapping-rdf.md  notes.txt
contrib/: README.md  class_extensions.yaml  closures.yaml  core.yaml  go.yaml  monarch.yaml  taxon.yaml  translator.yaml
csolink/: __init__.py  model.py
docs/: Activity.md  ActivityAndBehavior.md  AdministrativeEntity.md  AdministrativeOperationalExposure.md  AdministrativeOperationalToComponentserviceAssociation.md  AdministrativeOperationalToComponentserviceInteractionExposure.md  Agent.md  AnatomicalEntity.md  AnatomicalEntityToAnatomicalEntityAssociation.md  AnatomicalEntityToAnatomicalEntityOntogenicAssociation.md  AnatomicalEntityToAnatomicalEntityPartOfAssociation.md  Annotation.md  Article.md  Association.md  Attribute.md  AttributeType.md  Awareness.md  Behavior.md  BehaviorToBehavioralFeatureAssociation.md  BehavioralExposure.md  BehavioralOutcome.md  BiologicalEntity.md  BiologicalProcess.md  BiologicalProcessOrActivity.md  BiologicalSex.md  BioticExposure.md  Bitstream.md  Book.md  BookChapter.md  Carbohydrate.md  Case.md  CaseToEntityAssociationMixin.md  CaseToObservableFeatureAssociation.md  CaseToPhenotypicFeatureAssociation.md  Cell.md  CellLine.md  (+660 more)
(+616 files in other folders)
